--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.16.0",
+    "@douyinfe/semi-ui": "^2.25.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@redux-devtools/extension": "^3.2.3",
     "@svgr/webpack": "^5.5.0",
